fix: aligner.center & checkbox label styling

--- a/src/Aligner/styles.module.scss
+++ b/src/Aligner/styles.module.scss
@@ -22,8 +22,7 @@
   }
 
   &__center {
-    margin-left: auto;
-    margin-right: auto;
+    justify-content: center;
   }
 
   &__left {
